jumpserver/3.jms-redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: jms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:6.2.3
          command: ["redis-server /etc/redis/redis.conf"]
          securityContext:
            runAsUser: 0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 3306
            timeoutSeconds: 3
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 3306
            timeoutSeconds: 3
          ports:
            - containerPort: 6379
              name: redis
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: "0.5"
              memory: 512Mi
          volumeMounts:
            - mountPath: /data
              name: redis-data
              subPath: data
            - mountPath: /etc/redis/redis.conf
              name: redis-conf
              subPath: redis.conf
            - mountPath: /etc/localtime
              name: localtime
      volumes:
        - name: redis-data
          persistentVolumeClaim:
            claimName: redis-data
        - name: redis-conf
          configMap:
            defaultMode: 420
            name: redis-conf
            items:
              - key: redis.conf
                path: redis.conf
        - hostPath:
            path: /etc/localtime
            type: ""
          name: localtime
