jumpserver/5.jms-celery.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: celery
  namespace: jms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery
  template:
    metadata:
      labels:
        app: celery
    spec:
      containers:
        - name: celery
          image: jumpserver/celery:v2.28.10
          command: start task
          securityContext:
            runAsUser: 0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: celery-1
              protocol: TCP
            - containerPort: 8070
              name: celery-2
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: "0.5"
              memory: 512Mi
          volumeMounts:
            - mountPath: /opt/jumpserver/data
              name: celery-data
              subPath: data
            - mountPath: /opt/jumpserver/logs
              name: celery-logs
              subPath: logs
            - mountPath: /etc/localtime
              name: localtime
      volumes:
        - name: celery-data
          persistentVolumeClaim:
            claimName: celery-data
        - name: celery-logs
          persistentVolumeClaim:
            claimName: celery-logs
        - hostPath:
            path: /etc/localtime
            type: ""
          name: localtime
