jumpserver/8.jms-magnus.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magnus
  namespace: jms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magnus
  template:
    metadata:
      labels:
        app: magnus
    spec:
      containers:
        - name: magnus
          image: jumpserver/magnus:v2.28.10
          tty: true
          securityContext:
            runAsUser: 0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - "-c"
                - /bin/ps aux | grep -v grep | grep magnus
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - "-c"
                - /bin/ps aux | grep -v grep | grep magnus
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: "0.5"
              memory: 512Mi
          volumeMounts:
            - mountPath: /opt/magnus/data
              name: magnus
              subPath: data
            - mountPath: /etc/localtime
              name: localtime
      volumes:
        - name: magnus
          persistentVolumeClaim:
            claimName: magnus
        - hostPath:
            path: /etc/localtime
            type: ""
          name: localtime
