jumpserver/4.jms-core.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core
  namespace: jms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core
  template:
    metadata:
      labels:
        app: core
    spec:
      containers:
        - name: core
          image: jumpserver/core:v2.28.10
          tty: true
          args:
            - start
            - web
          securityContext:
            runAsUser: 0
          imagePullPolicy: IfNotPresent
#          livenessProbe:
#            failureThreshold: 5
#            initialDelaySeconds: 60
#            periodSeconds: 30
#            successThreshold: 1
#            tcpSocket:
#              port: 8080
#            timeoutSeconds: 5
#          readinessProbe:
#            failureThreshold: 5
#            initialDelaySeconds: 60
#            periodSeconds: 30
#            successThreshold: 1
#            httpGet:
#              port: 8080
#              path: /api/health/
#            timeoutSeconds: 5
          ports:
            - containerPort: 8080
              name: core-8080
              protocol: TCP
            - containerPort: 8070
              name: core-8070
              protocol: TCP
          volumeMounts:
            - mountPath: /opt/jumpserver/data
              name: core
              subPath: data
            - mountPath: /opt/jumpserver/logs
              name: core
              subPath: logs
            - mountPath: /etc/localtime
              name: localtime
      volumes:
        - name: core
          persistentVolumeClaim:
            claimName: core
        - hostPath:
            path: /etc/localtime
            type: ""
          name: localtime
---
apiVersion: v1
kind: Service
metadata:
  name: core
  namespace: jms
spec:
  ports:
    - name: core-8080
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: core-8070
      protocol: TCP
      port: 8070
      targetPort: 8070
  type: ClusterIP
  selector:
    app: core
