jumpserver/6.jms-koko.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: koko
  namespace: jms
spec:
  type: NodePort
  ports:
    - name: ssh
      port: 2222
      protocol: TCP
      targetPort: 2222
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: koko
  namespace: jms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: koko
  template:
    metadata:
      labels:
        app: koko
    spec:
      containers:
        - name: koko
          image: jumpserver/koko:v2.28.10
          securityContext:
            runAsUser: 0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 2222
              name: ssh
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: "0.5"
              memory: 512Mi
          volumeMounts:
            - mountPath: /opt/koko/data
              name: koko-data
              subPath: data
            - mountPath: /etc/localtime
              name: localtime
      volumes:
        - name: koko-data
          persistentVolumeClaim:
            claimName: koko-data
        - hostPath:
            path: /etc/localtime
            type: ""
          name: localtime
