jumpserver/7.jms-lion.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lion
  namespace: jms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lion
  template:
    metadata:
      labels:
        app: lion
    spec:
      containers:
        - name: lion
          image: jumpserver/lion:v2.28.10
          securityContext:
            runAsUser: 0
          imagePullPolicy: IfNotPresent
#          livenessProbe:
#            failureThreshold: 5
#            initialDelaySeconds: 30
#            periodSeconds: 5
#            successThreshold: 1
#            tcpSocket:
#              port: 8081
#            timeoutSeconds: 3
#          readinessProbe:
#            httpGet:
#              port: 8081
#              path: /lion/health/
#            failureThreshold: 5
#            initialDelaySeconds: 10
#            periodSeconds: 5
#            successThreshold: 1
#            timeoutSeconds: 3
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: "0.5"
              memory: 512Mi
          volumeMounts:
            - mountPath: /opt/lion/data
              name: lion
              subPath: data
            - mountPath: /etc/localtime
              name: localtime
      volumes:
        - name: lion
          persistentVolumeClaim:
            claimName: lion
        - hostPath:
            path: /etc/localtime
            type: ""
          name: localtime
---
apiVersion: v1
kind: Service
metadata:
  name: lion
  namespace: jms
spec:
  ports:
    - name: lion
      protocol: TCP
      port: 8081
      targetPort: 8081
  type: ClusterIP
  selector:
    app: lion
