jumpserver/9.jms-web.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: jms
spec:
  type: NodePort
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: jms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: jumpserver/web:v2.28.10
          tty: true
          securityContext:
            runAsUser: 0
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 5
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 1
            tcpSocket:
              port: 80
            timeoutSeconds: 3
          readinessProbe:
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 5
            successThreshold: 1
            httpGet:
              port: 80
              path: /
            timeoutSeconds: 3
          ports:
            - containerPort: 80
              name: web
              protocol: TCP
          resources:
            limits:
              cpu: "1"
              memory: 1Gi
            requests:
              cpu: "0.5"
              memory: 512Mi
          volumeMounts:
            - mountPath: /opt/jumpserver/data
              name: core
              subPath: data
            - mountPath: /var/log/nginx
              name: web
              subPath: log
            - mountPath: /etc/localtime
              name: localtime
      volumes:
        - name: web
          persistentVolumeClaim:
            claimName: web
        - name: core
          persistentVolumeClaim:
            claimName: core
        - hostPath:
            path: /etc/localtime
            type: ""
          name: localtime
