jumpserver/9.jms-web-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: jms
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "1024M"
  labels:
    app: web
spec:
  ingressClassName: nginx
  rules:
  - host: jumpserver.github.icu
    http:
      paths:
      - backend:
          service:
            name: web
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - jumpserver.github.icu
    secretName: github-tls
